app/assets/sass/components/_ticket-panel.scss
/* ==========================================================================
   #TICKET PANEL
   ========================================================================== */

  .moj-ticket-panel-container{
    display: flex;
    flex-wrap: wrap;
  }

  .moj-ticket-panel {
  display: flex;
  justify-content: space-between;
  margin-right: govuk-spacing(3);
  flex-wrap: wrap;
  flex-grow: 1;
  border: 1px solid govuk-colour("mid-grey");
  background-color: govuk-colour("white");
  margin-bottom: govuk-spacing(3);

  &__actions{
    display: flex;
    order: 1;
    flex-shrink: 1;
    flex-direction: column;
    justify-content: space-between;
    padding: govuk-spacing(2);
    background-color: govuk-colour("light-grey");
    border-left: 4px solid transparent;

    &--grey {
      border-left-color: $govuk-border-colour;

      .moj-ticket-panel__actions{
        background-color: $govuk-border-colour;
      }
    }
    &--blue {
      border-left-color: govuk-colour("blue");

      .moj-ticket-panel__actions{
        background-color: govuk-colour("blue");
      }
    }
    &--red {
      border-left-color: govuk-colour("red");

      .moj-ticket-panel__actions{
        background-color: govuk-colour("red");
      }
    }
    &--yellow {
      border-left-color: govuk-colour("yellow");

      .moj-ticket-panel__actions{
        background-color: govuk-colour("yellow");
      }
    }
    &--green {
      border-left-color: govuk-colour("green");

      .moj-ticket-panel__actions{
        background-color: govuk-colour("green");
      }
    }
    &--purple {
      border-left-color: govuk-colour("purple");

      .moj-ticket-panel__actions{
        background-color: govuk-colour("purple");
      }
    }
    &--orange {
      border-left-color: govuk-colour("orange");

      .moj-ticket-panel__actions{
        background-color: govuk-colour("orange");
      }
    }
  }

    &--inline {
      @include govuk-media-query($from: desktop) {
        display: flex;
        flex-wrap: nowrap;

        & > * + * {
          margin-left: govuk-spacing(3);
        }
      }
    }

    &__content *:last-child {
      margin-bottom: govuk-spacing(0);
    }

    &__content {
      min-height: 7rem;
      width: 26rem;
      position: relative;
      padding: govuk-spacing(4);
      flex-grow: 5;
      order: 2;
      border-left: 4px solid transparent;

      &--grey {
        border-left-color: $govuk-border-colour;

        .moj-ticket-panel__actions{
          background-color: $govuk-border-colour;
        }
      }
      &--blue {
        border-left-color: govuk-colour("blue");

        .moj-ticket-panel__actions{
          background-color: govuk-colour("blue");
        }
      }
      &--red {
        border-left-color: govuk-colour("red");

        .moj-ticket-panel__actions{
          background-color: govuk-colour("red");
        }
      }
      &--yellow {
        border-left-color: govuk-colour("yellow");

        .moj-ticket-panel__actions{
          background-color: govuk-colour("yellow");
        }
      }
      &--green {
        border-left-color: govuk-colour("green");

        .moj-ticket-panel__actions{
          background-color: govuk-colour("green");
        }
      }
      &--purple {
        border-left-color: govuk-colour("purple");

        .moj-ticket-panel__actions{
          background-color: govuk-colour("purple");
        }
      }
      &--orange {
        border-left-color: govuk-colour("orange");

        .moj-ticket-panel__actions{
          background-color: govuk-colour("orange");
        }
      }
    }

    &__content-with-actions {
      padding: govuk-spacing(0);
      border-left: 0;

      .govuk-grid-row{
        margin-left: 0;
        margin-right: 0;
      }
    }

    &__links{
      text-align: right;
    }
  }

